apps/linkding/base/linkding-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
  labels:
    app: linkding
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-data-pvc
      containers:
        - name: linkding
          image: sissbruecker/linkding:1.40.0
          ports:
            - containerPort: 9090
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: linkding-data
              mountPath: /etc/linkding/data
          startupProbe:
            httpGet:
              path: /health
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 9090
            periodSeconds: 30
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 9090
            periodSeconds: 15
            failureThreshold: 5
