apps/linkding/base/linkding-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-service
  namespace: linkding
spec:
  type: NodePort
  selector:
    app: linkding
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30007
