apps/linkding/base/linkding-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-nodeport
  namespace: linkding
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30077
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/instance: linkding
    app.kubernetes.io/name: linkding
  sessionAffinity: None
  type: NodePort
