apps/linkding/base/linkding-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-service
  namespace: linkding
spec:
  type: NodePort
  selector:
    app: linkding
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30007
---
apiVersion: v1
kind: Service
metadata:
  name: linkding-ipservice
  namespace: linkding
spec:
  selector:
    app: linkding
  ports:
    - name: linkding-http
      port: 9090
      targetPort: 9090
