apps/linkding/base/linkding-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
  name: linkding-route
  namespace: linkding
spec:
  hostnames:
  - linkding.lokal
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: linkding-ipservice
      port: 9090
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
