apps/linkding/base/linkding-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
  namespace: linkding
spec:
  rules:
  - host: linkding.lokal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkding-ipservice
            port:
              name: linkding-http
